Use maven-shade for jar packaging